# lessons

./: .gitignore  Procfile  Readme.md  elm-package.json  lessons.cabal  stack.yaml
app/: Main.hs
lessons-api/: lessons.cabal
lessons-api/app/: Main.hs
lessons-api/src/: Lessons.hs  Lib.hs
lessons-api/src/Poop/: Trello.hs
lessons-api/src/Poop/Trello/: Badges.hs  Card.hs
lessons-api/src/Web/: Trello.hs
lessons-api/test/: Spec.hs
lessons-ui/: Main.elm  StripeCheckout.elm  Style.elm  elm-checkout.js  elm-package.json  elm.js  index.html
src/: Config.hs  Lessons.hs
src/Web/Trello/: Badges.hs  Card.hs
ui/: Main.elm  Style.elm  elm-checkout.js  elm-package.json  index.html
