name:                lessons
version:             0.1.0.0
synopsis:            A small website to manage scheduling and payments for private lessons
description:         Please see README.md
homepage:            http://github.com/nicklawls/lessons
license:             BSD3
license-file:        LICENSE
author:              Nicolas Lawler
maintainer:          lawler145@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.8
                     , either
                     , mtl
                     , text
                     , bytestring
                     , wai
                     , warp
                     , unordered-containers >= 0.2.5.1
                     , servant == 0.4.*
                     , servant-server == 0.4.*
                     , stripe-haskell == 0.1.4.1
  default-language:    Haskell2010

executable lessons
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson >= 0.8
                     , time
                     , wai
                     , warp
                     , lessons
                     , servant == 0.4.*
                     , servant-server == 0.4.*
                     , stripe-haskell == 0.1.4.1
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lessons
                     , hspec == 2.1.10
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nicklawls/lessons.git
